--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Falco van der Meulen - Technical Computer Science Student</title>
+<title>Falco van der Meulen - Computer Science Student</title>
 
 <!-- Fetch CSS -->
 <link rel="stylesheet" href="htmlFiles/reset.css">
@@ -21,7 +21,7 @@
 		<div class="container_16">
 				<hgroup>
 					<h1>Falco van der Meulen</h1>
-					<h2>Technical Computer Science Student</h2>
+					<h2>Computer Science Student</h2>
 				</hgroup>
 
 				<figure>
@@ -29,24 +29,6 @@
 				</figure>
 		</div>
 	</header>
-	
-	<!-- Contact -->
-	<section class="contactform clearfix">
-		<div class="container_16">
-			<h3>Contact me</h3>
-			<p>Fill in the form below to send me a message, I'll respond as soon as I can!
-			<br><em>All fields are required.</em></p>
-			<form novalidate="novalidate" method="post" action="#" name="contact" class="grid_16">
-				<p class="grid_10"><textarea name="message" placeholder="Your message" class="required"></textarea></p>
-				<p class="grid_6">
-					<input name="name" placeholder="Name" class="required" type="text">
-					<input name="email" placeholder="Email address" class="required" type="email">	
-					<input name="message" value="Add your message" class="required" type="submit">
-					<span class="messageform"></span>
-				</p>
-			</form>
-		</div>
-	</section>
 	
 	<!-- Body -->
 	<section role="main" class="container_16 clearfix">
@@ -65,11 +47,11 @@ but programming has become one of my hobbies as well.</p>
 			<div class="grid_8 skills">
 				<h3>Skills</h3>
 				<ul class="bars">
-					<li data-skills="80">Java	-	Advanced</li>
-					<li data-skills="60">C++	-	Advanced</li>
-					<li data-skills="75">Python	-	Intermediate</li>
-					<li data-skills="40">SQL	-	Advanced</li>
-					<li data-skills="95">Linux	-	Intermediate</li>
+					<li data-skills="80">Java<span style="width: 80%;"></span></li>
+					<li data-skills="80">C++<span style="width: 80%;"></span></li>
+					<li data-skills="65">Python<span style="width: 65%;"></span></li>
+					<li data-skills="70">SQL<span style="width: 70%;"></span></li>
+					<li data-skills="60">Linux<span style="width: 60%;"></span></li>
 				</ul>
 			</div>
 		</div>
@@ -144,11 +126,15 @@ latin, greek and french.</p>
 				<ul>
 					<li class="place">Heenvliet, the Netherlands</li>
 					<li class="phone">+31 6 20 06 98 88</li>
-					<li class="mail"><a href="mailto:falco.meulen@gmail.com.com">E-Mail</a></li>
-					<li class="site"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
-                    <li class="form"><a class="toContactform">using the contact form</a></li>
+					<li class="mail"><a href="mailto:falco.meulen@gmail.com">E-Mail</a></li>
+					<li class="github"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
 				</ul>
 			</div>
 	</section>
+
+<!-- Scripts JavaScript -->
+<script src="htmlFiles/jquery-1.js"></script>
+<script src="htmlFiles/validate.js"></script>
+<script src="htmlFiles/plugins.js"></script>
 
 </body></html>
