Removed unused JavaScript files and added languages info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section role="main" class="container_16 clearfix">
 		<div class="grid_16">
 			<!-- About me -->
-			<div class="grid_8 aboutme">
+			<div class="grid_16 aboutme">
 				<h3>About me</h3>
 				<p>This section will tell something about me.</p>
 				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student.
@@ -43,6 +43,16 @@ My main hobbies are gaming and hanging out with friends,
 but programming has become one of my hobbies as well.</p>
 			</div>
 			
+			<!-- Languages -->
+			<div class="grid_8 languages">
+				<h3>Languages</h3>
+				<ul class="bars">
+					<li data-skills="90">Dutch<span style="width: 90%;"></span></li>
+					<li data-skills="85">English<span style="width: 85%;"></span></li>
+					<li data-skills="50">German<span style="width: 50%;"></span></li>
+				</ul>
+			</div>
+
 			<!-- Skills -->
 			<div class="grid_8 skills">
 				<h3>Skills</h3>
