Fixed wrong name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Falco van der Meulen - Computer Science Student</title>
+<title>Falco van der Meulen - Computer Engineering Student</title>
 
 <!-- Fetch CSS -->
 <link rel="stylesheet" href="htmlFiles/reset.css">
@@ -21,7 +21,7 @@
 		<div class="container_16">
 				<hgroup>
 					<h1>Falco van der Meulen</h1>
-					<h2>Computer Science Student</h2>
+					<h2>Computer Engineering Student</h2>
 				</hgroup>
 
 				<figure>
@@ -38,7 +38,7 @@
 				<h3>About me</h3>
 				<p>This section will tell something about me.</p>
 				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student.
-I study Computer Science because I've always had an interest in computers.
+I study Computer Engineering because I've always had an interest in computers.
 My main hobbies are gaming and hanging out with friends,
 but programming has become one of my hobbies as well.</p>
 			</div>
@@ -102,10 +102,10 @@ car dealers, lease companies or car-rental companies all over the country.
 				<h3>Education</h3>
 				<ul>
 					<li>
-						<h4><strong>Bachelor of Computer Science</strong> Rotterdam University of Applied Sciences</h4>
+						<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
 						<span class="place">Rotterdam</span>
 						<span class="dates">Aug. 2016 - now</span>
-						<p>During a bachelor of Computer Science, students are taught
+						<p>During a bachelor of Computer Engineering, students are taught
 how to work with both software and hardware. Subjects include various programming languages,
 computer networking, mathematics, useful skills and various projects.</p>
 						<span class="extra"><i>Propaedeutics achieved.</i></span>
