Revisitied 'about me' section

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 			<!-- About me -->
 			<div class="grid_16 aboutme">
 				<h3>About me</h3>
-				<p>This section will tell something about me.</p>
+				<p>Here you can find a little information about me.</p>
 				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student.
 I study Computer Engineering because I've always had an interest in computers.
-My main hobbies are gaming and hanging out with friends,
-but programming has become one of my hobbies as well.</p>
+My main hobbies are gaming and hanging out with friends, but programming has 
+become one of my hobbies as well. I am a friendly boy who loves music,
+but I like being social so don't let the headphones scare you off!</p>
 			</div>
 			
 			<!-- Languages -->
