Added projects to resume.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ but I like being social so don't let the headphones scare you off!</p>
 					<li data-skills="65">Python<span style="width: 65%;"></span></li>
 					<li data-skills="70">SQL<span style="width: 70%;"></span></li>
 					<li data-skills="60">Linux<span style="width: 60%;"></span></li>
+					<li data-skills="50">Haskell<span style="width: 50%;"></span></li>
 				</ul>
 			</div>
 		</div>
@@ -74,11 +75,9 @@ but I like being social so don't let the headphones scare you off!</p>
 					<li>
 						<h4><strong>Student intern</strong> Cornerstone Technology B.V.</h4>
 						<span class="place">Dordrecht</span>
-						<span class="dates">Sep. 2018 - now</span>
+						<span class="dates">Sep. 2018 - Jan. 2019</span>
 						<p>Student intern at Cornerstone Technology B.V., after a short period of
-training I will be collaborating with other employees in a commercial project for the company. Some tasks
-include tokenizing sources, describing language grammar in BNF-code and writing language-
-conversion rules in C++.</p>
+training I collaborated with other employees in a commercial project for the company. I described source grammar in BNF, altered macros for a PL/1 pre-processor and implemented runtime tracing in Java.</p>
 					</li>
 					<li>
 						<h4><strong>Peercoach</strong> Rotterdam University of Applied Sciences</h4>
@@ -92,7 +91,7 @@ as well as assisting them in projects.</p>
 						<h4><strong>Chauffeur</strong> AutoReset</h4>
 						<span class ="place">The Netherlands</span>
 						<span class="dates">May 2018 - now</span>
-						<p>As a chauffer for AutoReset I am tasked with driving cars for
+						<p>As a chauffeur for AutoReset I am tasked with driving cars for
 car dealers, lease companies or car-rental companies all over the country.
 					</li>
 				</ul>
@@ -119,6 +118,39 @@ computer networking, mathematics, useful skills and various projects.</p>
 mathematics, physics, chemistry, biology, english, german, dutch, physical education, art,
 latin, greek and french. The profile (subject set) I chose was mainly focused on mathematics, physics and chemistry.</p>
 						<span class="extra"><i>Profile: Nature & Technology.</i></span>
+					</li>
+				</ul>
+			</div>
+
+			<!-- Projects -->
+			<div class="grid_16 projects">
+				<h3>Projects</h3>
+				<ul>
+					<li>
+						<h4><strong>The Music Hand</strong></h4>
+						<span class="description">Musical instrument simulator.</span>
+						<p>The Music Hand is a pair of gloves fitted with sensors and accompanied by a smartphone app, allowing you to simulate musical instruments without holding them!
+						</p>
+					</li>
+					<li>
+						<h4><strong>PokedexC++</strong></h4>
+						<span class="description">Pokedex for Linux.</span>
+						<p>Encyclopedia for the Pokemon franchise, written in C++ to run on Linux. Data stored in local MySQL database with a GUI made using GTK+. Project done solely for fun!
+						</p>
+					</li>
+					<li>
+						<h4><strong>ShellLib</strong></h4>
+						<span class="description">Custom bash functions.</span>
+						<p>A handful of custom, self-made shell-functions to help me in my daily life and also familiarize myself with scripting.
+						</p>
+					</li>
+					<li>
+						<h4><strong>Laptop ATM</strong></h4>
+						<span class="description">Turning a laptop into an ATM using Java, an Arduino and Lego Mindstorms. Java running the main program with GUI, Arduino Uno controlling RFID-reader and touchpad, and a server processing transactions and managing accounts.
+					</li>
+					<li>
+						<h4><strong>PoECalc</strong></h4>
+						<span class="description">A companion application for Warframe by Digital Extremes. This application calculated the day/night cycles in their Plains of Eidolon update, before an in-game counter was added.
 					</li>
 				</ul>
 			</div>
