Project description color change.

--- a/index.html
+++ b/index.html
@@ -146,11 +146,15 @@ latin, greek and french. The profile (subject set) I chose was mainly focused on
 					</li>
 					<li>
 						<h4><strong>Laptop ATM</strong></h4>
-						<span class="description">Turning a laptop into an ATM using Java, an Arduino and Lego Mindstorms. Java running the main program with GUI, Arduino Uno controlling RFID-reader and touchpad, and a server processing transactions and managing accounts.
+						<span class="description">Running an ATM on your laptop.</span>
+						<p>Turning a laptop into an ATM using Java, an Arduino and Lego Mindstorms. Java running the main program with GUI, Arduino Uno controlling RFID-reader and touchpad, and a server processing transactions and managing accounts.
+						</p>
 					</li>
 					<li>
 						<h4><strong>PoECalc</strong></h4>
-						<span class="description">A companion application for Warframe by Digital Extremes. This application calculated the day/night cycles in their Plains of Eidolon update, before an in-game counter was added.
+						<span class="description">Day/Night calculator for the Plains of Eidolon.</span>
+						<p>A companion application for Warframe by Digital Extremes. This application calculated the day/night cycles in their Plains of Eidolon update, before an in-game counter was added.
+						</p>
 					</li>
 				</ul>
 			</div>
