--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
 			<div class="grid_16 aboutme">
 				<h3>About me</h3>
 				<p>Here you can find a little information about me.</p>
-				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student.
-I study Computer Engineering because I've always had an interest in computers.
-My main hobbies are gaming and hanging out with friends, but programming has 
-become one of my hobbies as well. I am a friendly boy who loves music,
-but I like being social so don't let the headphones scare you off!</p>
+				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student. I study Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
 			</div>
 			
 			<!-- Languages -->
@@ -68,31 +64,27 @@ but I like being social so don't let the headphones scare you off!</p>
 			</div>
 		</div>
 		
-			<!-- Experience -->
-			<div class="grid_16 experience">
-				<h3>Experience</h3>
-				<ul>
-					<li>
-						<h4><strong>Student intern</strong> Cornerstone Technology B.V.</h4>
-						<span class="place">Dordrecht</span>
-						<span class="dates">Sep. 2018 - Jan. 2019</span>
-						<p>Student intern at Cornerstone Technology B.V., after a short period of
-training I collaborated with other employees in a commercial project for the company. I described source grammar in BNF, altered macros for a PL/1 pre-processor and implemented runtime tracing in Java.</p>
+		<!-- Experience -->
+		<div class="grid_16 experience">
+			<h3>Experience</h3>
+			<ul>
+				<li>
+					<h4><strong>Student intern</strong> Cornerstone Technology B.V.</h4>
+					<span class="place">Dordrecht</span>
+					<span class="dates">Sep. 2018 - Jan. 2019</span>
+					<p>Student intern at Cornerstone Technology B.V., after a short period of training I collaborated with other employees in a commercial project for the company. I described source grammar in BNF, altered macros for a PL/1 pre-processor and implemented runtime tracing in Java.</p>
 					</li>
 					<li>
 						<h4><strong>Peercoach</strong> Rotterdam University of Applied Sciences</h4>
 						<span class="place">Rotterdam</span>
 						<span class="dates">Aug. 2017 - Jul. 2018</span>
-						<p>As a peercoach (student helper) I was helping the first-year-students
-with getting through their first year successfully. I was busy tutoring and advising first-years
-as well as assisting them in projects.</p>
+						<p>As a peercoach (student helper) I was helping the first-year-students with getting through their first year successfully. I was busy tutoring and advising first-years as well as assisting them in projects.</p>
 					</li>
 					<li>
 						<h4><strong>Chauffeur</strong> AutoReset</h4>
 						<span class ="place">The Netherlands</span>
 						<span class="dates">May 2018 - now</span>
-						<p>As a chauffeur for AutoReset I am tasked with driving cars for
-car dealers, lease companies or car-rental companies all over the country.
+						<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country.
 					</li>
 				</ul>
 			</div>
@@ -105,19 +97,27 @@ car dealers, lease companies or car-rental companies all over the country.
 						<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
 						<span class="place">Rotterdam</span>
 						<span class="dates">Aug. 2016 - now</span>
-						<p>During a bachelor of Computer Engineering, students are taught
-how to work with both software and hardware. Subjects include various programming languages,
-computer networking, mathematics, useful skills and various projects.</p>
+						<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
 						<span class="extra"><i>Propaedeutics achieved.</i></span>
 					</li>
 					<li>
 						<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
 						<span class="place">Spijkenisse</span>
 						<span class="dates">Aug. 2010 - May. 2016</span>
-						<p>General education to prepare for university/college. Subjects include
-mathematics, physics, chemistry, biology, english, german, dutch, physical education, art,
-latin, greek and french. The profile (subject set) I chose was mainly focused on mathematics, physics and chemistry.</p>
+						<p>General education to prepare for university/college. Subjects include mathematics, physics, chemistry, biology, english, german, dutch, physical education, art, latin, greek and french. The profile (subject set) I chose was mainly focused on mathematics, physics and chemistry.</p>
 						<span class="extra"><i>Profile: Nature & Technology.</i></span>
+					</li>
+				</ul>
+			</div>
+
+			<!-- Certificates -->
+			<div class="grid_16 certificates">
+				<h3>Certificates</h3>
+				<ul>
+					<li>
+						<h4><strong>Certified Secure</strong></h4>
+						<span class="description">Essential Security, Safe Internet, Safe Internet Plus</span>
+						<p>Validation: www.certifiedsecure.com/profile/CS-12021937527</p>
 					</li>
 				</ul>
 			</div>
@@ -178,10 +178,5 @@ latin, greek and french. The profile (subject set) I chose was mainly focused on
 				</ul>
 			</div>
 	</section>
-
-<!-- Scripts JavaScript -->
-<script src="htmlFiles/jquery-1.js"></script>
-<script src="htmlFiles/validate.js"></script>
-<script src="htmlFiles/plugins.js"></script>
 
 </body></html>
