Projects provided with more information.

--- a/index.html
+++ b/index.html
@@ -73,110 +73,191 @@
 					<span class="place">Dordrecht</span>
 					<span class="dates">Sep. 2018 - Jan. 2019</span>
 					<p>Student intern at Cornerstone Technology B.V., after a short period of training I collaborated with other employees in a commercial project for the company. I described source grammar in BNF, altered macros for a PL/1 pre-processor and implemented runtime tracing in Java.</p>
-					</li>
-					<li>
-						<h4><strong>Peercoach</strong> Rotterdam University of Applied Sciences</h4>
-						<span class="place">Rotterdam</span>
-						<span class="dates">Aug. 2017 - Jul. 2018</span>
-						<p>As a peercoach (student helper) I was helping the first-year-students with getting through their first year successfully. I was busy tutoring and advising first-years as well as assisting them in projects.</p>
-					</li>
-					<li>
-						<h4><strong>Chauffeur</strong> AutoReset</h4>
-						<span class ="place">The Netherlands</span>
-						<span class="dates">May 2018 - now</span>
-						<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country.
-					</li>
-				</ul>
-			</div>
+				</li>
+				<li>
+					<h4><strong>Peercoach</strong> Rotterdam University of Applied Sciences</h4>
+					<span class="place">Rotterdam</span>
+					<span class="dates">Aug. 2017 - Jul. 2018</span>
+					<p>As a peercoach (student helper) I was helping the first-year-students with getting through their first year successfully. I was busy tutoring and advising first-years as well as assisting them in projects.</p>
+				</li>
+				<li>
+					<h4><strong>Chauffeur</strong> AutoReset</h4>
+					<span class ="place">The Netherlands</span>
+					<span class="dates">May 2018 - now</span>
+					<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country.
+				</li>
+			</ul>
+		</div>
 		
-			<!-- Education -->
-			<div class="grid_16 education">
-				<h3>Education</h3>
-				<ul>
-					<li>
-						<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
-						<span class="place">Rotterdam</span>
-						<span class="dates">Aug. 2016 - now</span>
-						<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
-						<span class="extra"><i>Propaedeutics achieved.</i></span>
-					</li>
-					<li>
-						<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
-						<span class="place">Spijkenisse</span>
-						<span class="dates">Aug. 2010 - May. 2016</span>
-						<p>General education to prepare for university/college. Subjects include mathematics, physics, chemistry, biology, english, german, dutch, physical education, art, latin, greek and french. The profile (subject set) I chose was mainly focused on mathematics, physics and chemistry.</p>
-						<span class="extra"><i>Profile: Nature & Technology.</i></span>
-					</li>
-				</ul>
+		<!-- Education -->
+		<div class="grid_16 education">
+			<h3>Education</h3>
+			<ul>
+				<li>
+					<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
+					<span class="place">Rotterdam</span>
+					<span class="dates">Aug. 2016 - now</span>
+					<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
+					<span class="extra"><i>Propaedeutics achieved.</i></span>
+				</li>
+				<li>
+					<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
+					<span class="place">Spijkenisse</span>
+					<span class="dates">Aug. 2010 - May. 2016</span>
+					<p>General education to prepare for university/college. Subjects include mathematics, physics, chemistry, biology, english, german, dutch, physical education, art, latin, greek and french. The profile (subject set) I chose was mainly focused on mathematics, physics and chemistry.</p>
+					<span class="extra"><i>Profile: Nature & Technology.</i></span>
+				</li>
+			</ul>
+		</div>
+
+		<!-- Certificates -->
+		<div class="grid_16 certificates">
+			<h3>Certificates</h3>
+			<ul>
+				<li>
+					<h4><strong>Certified Secure</strong></h4>
+					<span class="description">Essential Security, Safe Internet, Safe Internet Plus</span>
+					<p>Validation: www.certifiedsecure.com/profile/CS-12021937527</p>
+				</li>
+			</ul>
+		</div>
+
+		<!-- Projects -->
+		<div class="grid_16 projects">
+			<h3>Projects</h3>
+			
+			<!-- The Music Hand -->
+			<div class="grid_16">
+				<h4><strong>The Music Hand</strong></h4>
+				<div class="grid_8">
+					<span class="description">Musical instrument simulator.</span>
+					<p>The Music Hand is a pair of gloves fitted with sensors and accompanied by a smartphone app, allowing you to simulate musical instruments without holding them!</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Feb. 2018 - Jul. 2018</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">Android Java</span>
+						</li>
+						<li>
+							<span class="description">Bluetooth</span>
+						</li>
+					</ul>
+				</div>
 			</div>
 
-			<!-- Certificates -->
-			<div class="grid_16 certificates">
-				<h3>Certificates</h3>
-				<ul>
-					<li>
-						<h4><strong>Certified Secure</strong></h4>
-						<span class="description">Essential Security, Safe Internet, Safe Internet Plus</span>
-						<p>Validation: www.certifiedsecure.com/profile/CS-12021937527</p>
-					</li>
-				</ul>
+			<!-- PokedexC++ -->
+			<div class="grid_16">
+				<h4><strong>PokedexC++</strong></h4>
+				<div class="grid_8">
+					<span class="description">Pokedex for Linux.</span>
+					<p>Encyclopedia for the Pokemon franchise, written in C++ to run on Linux. Data stored in local MySQL database with a GUI made using GTK+. Project done solely for fun!</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Nov. 2018 - now</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">C++</span>
+						</li>
+						<li>
+							<span class="description">MySQL</span>
+						</li>
+						<li>
+							<span class="description">Python</span>
+						</li>
+					</ul>
+				</div>
 			</div>
 
-			<!-- Projects -->
-			<div class="grid_16 projects">
-				<h3>Projects</h3>
-				<ul>
-					<li>
-						<h4><strong>The Music Hand</strong></h4>
-						<span class="description">Musical instrument simulator.</span>
-						<p>The Music Hand is a pair of gloves fitted with sensors and accompanied by a smartphone app, allowing you to simulate musical instruments without holding them!
-						</p>
-					</li>
-					<li>
-						<h4><strong>PokedexC++</strong></h4>
-						<span class="description">Pokedex for Linux.</span>
-						<p>Encyclopedia for the Pokemon franchise, written in C++ to run on Linux. Data stored in local MySQL database with a GUI made using GTK+. Project done solely for fun!
-						</p>
-					</li>
-					<li>
-						<h4><strong>ShellLib</strong></h4>
-						<span class="description">Custom bash functions.</span>
-						<p>A handful of custom, self-made shell-functions to help me in my daily life and also familiarize myself with scripting.
-						</p>
-					</li>
-					<li>
-						<h4><strong>Laptop ATM</strong></h4>
-						<span class="description">Running an ATM on your laptop.</span>
-						<p>Turning a laptop into an ATM using Java, an Arduino and Lego Mindstorms. Java running the main program with GUI, Arduino Uno controlling RFID-reader and touchpad, and a server processing transactions and managing accounts.
-						</p>
-					</li>
-					<li>
-						<h4><strong>PoECalc</strong></h4>
-						<span class="description">Day/Night calculator for the Plains of Eidolon.</span>
-						<p>A companion application for Warframe by Digital Extremes. This application calculated the day/night cycles in their Plains of Eidolon update, before an in-game counter was added.
-						</p>
-					</li>
-				</ul>
+			<!-- ShellLib -->
+			<div class="grid_16">
+				<h4><strong>ShellLib</strong></h4>
+				<div class="grid_8">
+					<span class="description">Custom bash functions.</span>
+					<p>A handful of custom, self-made shell-functions to help me in my daily life and also familiarize myself with scripting.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Nov. 2018 - Mar. 2019</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">Bash</span>
+						</li>
+						<li>
+							<span class="description">Linux</span>
+						</li>
+					</ul>
+				</div>
 			</div>
+
+			<!-- Laptop ATM -->
+			<div class="grid_16">
+				<h4><strong>Laptop ATM</strong></h4>
+				<div class="grid_8">
+					<span class="description">Running an ATM on your laptop.</span>
+					<p>Turning a laptop into an ATM using Java, an Arduino and Lego Mindstorms. Java running the main program with GUI, Arduino Uno controlling RFID-reader and touchpad, and a server processing transactions and managing accounts.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Feb. 2017 - Jul. 2017</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">Arduino C</span>
+						</li>
+						<li>
+							<span class="description">Java</span>
+						</li>
+						<li>
+							<span class="description">MySQL</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- PoECalc -->
+			<div class="grid_16">
+				<h4><strong>PoECalc</strong></h4>
+				<div class="grid_8">
+					<span class="description">Day/Night calculator for the Plains of Eidolon.</span>
+					<p>A companion application for Warframe by Digital Extremes. This application calculated the day/night cycles in their Plains of Eidolon update, before an in-game counter was added.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Dec. 2017 - Feb 2018</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">Java</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		
-			<!-- Hobbies -->
-			<div class="grid_8 hobbies">
-				<h3>Hobbies</h3>
-				<p><strong>Sports :</strong> Free-running, swimming (non-competitive)</p>
-				<p><strong>Pastimes :</strong> Gaming, programming</p>
-			</div>
+		<!-- Hobbies -->
+		<div class="grid_8 hobbies">
+			<h3>Hobbies</h3>
+			<p><strong>Sports :</strong> Free-running, swimming (non-competitive)</p>
+			<p><strong>Pastimes :</strong> Gaming, programming</p>
+		</div>
 		
-			<!-- Contact -->
-			<div class="grid_8 contact">
-				<h3>Contact</h3>
-				<p>Do not hesitate to contact me if my profile intrigued you:</p>
-				<ul>
-					<li class="place">Heenvliet, the Netherlands</li>
-					<li class="phone">+31 6 20 06 98 88</li>
-					<li class="mail"><a href="mailto:falco.meulen@gmail.com">E-Mail</a></li>
-					<li class="github"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
-				</ul>
-			</div>
+		<!-- Contact -->
+		<div class="grid_8 contact">
+			<h3>Contact</h3>
+			<p>Do not hesitate to contact me if my profile intrigued you:</p>
+			<ul>
+				<li class="place">Heenvliet, the Netherlands</li>
+				<li class="phone">+31 6 20 06 98 88</li>
+				<li class="mail"><a href="mailto:falco.meulen@gmail.com">E-Mail</a></li>
+				<li class="github"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
+			</ul>
+		</div>
 	</section>
 
 </body></html>
