Added certificate PDFs with download button to page.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 				<p>Here you can find a little information about me.</p>
 				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student. I study Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
 			</div>
+
+			<!-- Skills -->
+			<div class="grid_8 skills">
+				<h3>Skills</h3>
+				<ul class="bars">
+					<li data-skills="80">Java<span style="width: 80%;"></span></li>
+					<li data-skills="80">C++<span style="width: 80%;"></span></li>
+					<li data-skills="70">SQL<span style="width: 70%;"></span></li>
+					<li data-skills="65">Python<span style="width: 65%;"></span></li>
+					<li data-skills="60">Linux<span style="width: 60%;"></span></li>
+					<li data-skills="50">Haskell<span style="width: 50%;"></span></li>
+					<li data-skills="40">C<span style="width: 40%;"></span></li>
+				</ul>
+			</div>
 			
 			<!-- Languages -->
 			<div class="grid_8 languages">
@@ -50,18 +64,6 @@
 				</ul>
 			</div>
 
-			<!-- Skills -->
-			<div class="grid_8 skills">
-				<h3>Skills</h3>
-				<ul class="bars">
-					<li data-skills="80">Java<span style="width: 80%;"></span></li>
-					<li data-skills="80">C++<span style="width: 80%;"></span></li>
-					<li data-skills="65">Python<span style="width: 65%;"></span></li>
-					<li data-skills="70">SQL<span style="width: 70%;"></span></li>
-					<li data-skills="60">Linux<span style="width: 60%;"></span></li>
-					<li data-skills="50">Haskell<span style="width: 50%;"></span></li>
-				</ul>
-			</div>
 		</div>
 		
 		<!-- Experience -->
@@ -84,7 +86,7 @@
 					<h4><strong>Chauffeur</strong> AutoReset</h4>
 					<span class ="place">The Netherlands</span>
 					<span class="dates">May 2018 - now</span>
-					<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country.
+					<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country. Vehicles vary from small cars to vans and small buses.</p>
 				</li>
 			</ul>
 		</div>
@@ -115,9 +117,22 @@
 			<h3>Certificates</h3>
 			<ul>
 				<li>
-					<h4><strong>Certified Secure</strong></h4>
-					<span class="description">Essential Security, Safe Internet, Safe Internet Plus</span>
-					<p>Validation: www.certifiedsecure.com/profile/CS-12021937527</p>
+					<h4><strong>Certified Secure - Essential Security</strong></h4>
+					<span class="description">
+						<a href="./res/certificates/Certified_Secure_Essential_Security.pdf" download="CS_Essential_Security.pdf">Download PDF</a>
+					</span>
+				</li>
+				<li>
+					<h4><strong>Certified Secure - Safe Internet</strong></h4>
+					<span class="description">
+						<a href="./res/certificates/Certified_Secure_Safe_Internet.pdf" download="CS_Safe_Internet.pdf">Download PDF</a>
+					</span>
+				</li>
+				<li>
+					<h4><strong>Certified Secure - Safe Internet Plus</strong></h4>
+					<span class="description">
+						<a href="./res/certificates/Certified_Secure_Safe_Internet_Plus.pdf" download="CS_Safe_Internet_Plus.pdf">Download PDF</a>
+					</span>
 				</li>
 			</ul>
 		</div>
