Added Wolf Island as project.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
 		<!-- Projects -->
 		<div class="grid_16 projects">
 			<h3>Projects</h3>
+
+			<!-- Wolf Island-->
+			<div class="grid_16">
+				<h4><strong>Wolf Island</strong></h4>
+				<div class="grid_8">
+					<span class="description">Android runner game.</span>
+					<p>Wolf Island is the first game built for the minor 'Game Design and Development', revolving around collecting materials on islands while dodging wolves. This game was built in a group of five.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Sep. 2019 - Oct. 2019</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">C#</span>
+						</li>
+						<li>
+							<span class="description">Unity</span>
+						</li>
+					</ul>
+				</div>
+			</div>
 			
 			<!-- The Music Hand -->
 			<div class="grid_16">
