Added downloadable PDF version.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</hgroup>
 
 				<figure>
-					<img src="htmlFiles/avatar.jpg" alt="Falco van der Meulen">
+					<img src="res/avatar.jpg" alt="Falco van der Meulen">
 				</figure>
 		</div>
 	</header>
@@ -119,19 +119,19 @@
 				<li>
 					<h4><strong>Certified Secure - Essential Security</strong></h4>
 					<span class="description">
-						<a href="./res/certificates/Certified_Secure_Essential_Security.pdf" download="CS_Essential_Security.pdf">Download PDF</a>
+						<a href="res/certificates/Certified_Secure_Essential_Security.pdf" download="CS_Essential_Security.pdf">Download PDF</a>
 					</span>
 				</li>
 				<li>
 					<h4><strong>Certified Secure - Safe Internet</strong></h4>
 					<span class="description">
-						<a href="./res/certificates/Certified_Secure_Safe_Internet.pdf" download="CS_Safe_Internet.pdf">Download PDF</a>
+						<a href="res/certificates/Certified_Secure_Safe_Internet.pdf" download="CS_Safe_Internet.pdf">Download PDF</a>
 					</span>
 				</li>
 				<li>
 					<h4><strong>Certified Secure - Safe Internet Plus</strong></h4>
 					<span class="description">
-						<a href="./res/certificates/Certified_Secure_Safe_Internet_Plus.pdf" download="CS_Safe_Internet_Plus.pdf">Download PDF</a>
+						<a href="res/certificates/Certified_Secure_Safe_Internet_Plus.pdf" download="CS_Safe_Internet_Plus.pdf">Download PDF</a>
 					</span>
 				</li>
 			</ul>
@@ -294,6 +294,10 @@
 				<li class="mail"><a href="mailto:falco.meulen@gmail.com">E-Mail</a></li>
 				<li class="github"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
 			</ul>
+			<p>
+				Rather have my resume on paper?<br>
+				<a href="res/CV_Falco_van_der_Meulen_2019-10.pdf" download="CV_Falco_van_der_Meulen_2019-10.pdf">Download PDF version</a>
+			</p>
 		</div>
 	</section>
 
