--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li data-skills="80">Java<span style="width: 80%;"></span></li>
 					<li data-skills="80">C++<span style="width: 80%;"></span></li>
 					<li data-skills="70">SQL<span style="width: 70%;"></span></li>
+					<li data-skills="75">C#<span style="width: 75%;"></span></li>
 					<li data-skills="65">Python<span style="width: 65%;"></span></li>
 					<li data-skills="60">Linux<span style="width: 60%;"></span></li>
 					<li data-skills="50">Haskell<span style="width: 50%;"></span></li>
@@ -71,6 +72,12 @@
 			<h3>Experience</h3>
 			<ul>
 				<li>
+					<h4><strong>Graduation internship</strong> Alten Nederland</h4>
+					<span class="place">Capelle a/d IJssel</span>
+					<span class="dates">Feb. 2020 - Now</span>
+					<p>Student intern at Alten Nederland, here I am working on gunfire detection using sound waves. This project will be used for a sensor network against poaching.</p>
+				</li>
+				<li>
 					<h4><strong>Student intern</strong> Cornerstone Technology B.V.</h4>
 					<span class="place">Dordrecht</span>
 					<span class="dates">Sep. 2018 - Jan. 2019</span>
@@ -82,12 +89,6 @@
 					<span class="dates">Aug. 2017 - Jul. 2018</span>
 					<p>As a peercoach (student helper) I was helping the first-year-students with getting through their first year successfully. I was busy tutoring and advising first-years as well as assisting them in projects.</p>
 				</li>
-				<li>
-					<h4><strong>Chauffeur</strong> AutoReset</h4>
-					<span class ="place">The Netherlands</span>
-					<span class="dates">May 2018 - now</span>
-					<p>As a chauffeur for AutoReset I am tasked with driving cars for car dealers, lease companies or car-rental companies all over the country. Vehicles vary from small cars to vans and small buses.</p>
-				</li>
 			</ul>
 		</div>
 		
@@ -98,7 +99,7 @@
 				<li>
 					<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
 					<span class="place">Rotterdam</span>
-					<span class="dates">Aug. 2016 - now</span>
+					<span class="dates">Aug. 2016 - Now</span>
 					<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
 					<span class="extra"><i>Propaedeutics achieved.</i></span>
 				</li>
@@ -140,6 +141,28 @@
 		<!-- Projects -->
 		<div class="grid_16 projects">
 			<h3>Projects</h3>
+
+			<!-- Lumin's Path-->
+			<div class="grid_16">
+				<h4><strong>Lumin's Path</strong></h4>
+				<div class="grid_8">
+					<span class="description">Unity platformer game.</span>
+					<p>Lumin's Path is a 3D platformer game developed in Unity, featuring a light/dark switch mechanic to influence the game world. This game was made in a group of twelve.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Nov. 2019 - Jan. 2020</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">C#</span>
+						</li>
+						<li>
+							<span class="description">Unity</span>
+						</li>
+					</ul>
+				</div>
+			</div>
 
 			<!-- Wolf Island-->
 			<div class="grid_16">
@@ -280,7 +303,7 @@
 		<!-- Hobbies -->
 		<div class="grid_8 hobbies">
 			<h3>Hobbies</h3>
-			<p><strong>Sports :</strong> Free-running, swimming (non-competitive)</p>
+			<p><strong>Sports :</strong> Running, swimming (non-competitive)</p>
 			<p><strong>Pastimes :</strong> Gaming, programming</p>
 		</div>
 		
@@ -290,13 +313,12 @@
 			<p>Do not hesitate to contact me if my profile intrigued you:</p>
 			<ul>
 				<li class="place">Heenvliet, the Netherlands</li>
-				<li class="phone">+31 6 20 06 98 88</li>
 				<li class="mail"><a href="mailto:falco.meulen@gmail.com">E-Mail</a></li>
 				<li class="github"><a href="https://GitHub.com/FRMeulen">GitHub</a></li>
 			</ul>
 			<p>
 				Rather have my resume on paper?<br>
-				<a href="res/CV_Falco_van_der_Meulen_2019-10.pdf" download="CV_Falco_van_der_Meulen_2019-10.pdf">Download PDF version</a>
+				<a href="res/CV_Falco_van_der_Meulen_2020-02.pdf" download="CV_Falco_van_der_Meulen_2020-02.pdf">Download PDF version</a>
 			</p>
 		</div>
 	</section>
