--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Falco van der Meulen - Computer Engineering Student</title>
+<title>Falco van der Meulen - Computer Engineering Graduate</title>
 
 <!-- Fetch CSS -->
 <link rel="stylesheet" href="htmlFiles/reset.css">
@@ -21,7 +21,7 @@
 		<div class="container_16">
 				<hgroup>
 					<h1>Falco van der Meulen</h1>
-					<h2>Computer Engineering Student</h2>
+					<h2>Computer Engineering Graduate</h2>
 				</hgroup>
 
 				<figure>
@@ -37,7 +37,7 @@
 			<div class="grid_16 aboutme">
 				<h3>About me</h3>
 				<p>Here you can find a little information about me.</p>
-				<p>My name is Falco Rainier van der Meulen and I'm a Dutch student. I study Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
+				<p>My name is Falco Rainier van der Meulen and I'm a Dutch graduate. I studied Computer Engineering because I've always had an interest in computers. My main hobbies are gaming and hanging out with friends, but programming has become one of my hobbies as well. I am a friendly boy who loves music, but I like being social so don't let the headphones scare you off!</p>
 			</div>
 
 			<!-- Skills -->
@@ -74,8 +74,8 @@
 				<li>
 					<h4><strong>Graduation internship</strong> Alten Nederland</h4>
 					<span class="place">Capelle a/d IJssel</span>
-					<span class="dates">Feb. 2020 - Now</span>
-					<p>Student intern at Alten Nederland, here I am working on gunfire detection using sound waves. This project will be used for a sensor network against poaching.</p>
+					<span class="dates">Feb. 2020 - Jul. 2020</span>
+					<p>Student intern at Alten Nederland, here I worked on a gunfire recognition system using TensorFlow. This project will be used for a sensor network against poaching in Africa.</p>
 				</li>
 				<li>
 					<h4><strong>Student intern</strong> Cornerstone Technology B.V.</h4>
@@ -99,9 +99,9 @@
 				<li>
 					<h4><strong>Bachelor of Computer Engineering</strong> Rotterdam University of Applied Sciences</h4>
 					<span class="place">Rotterdam</span>
-					<span class="dates">Aug. 2016 - Now</span>
+					<span class="dates">Aug. 2016 - Jul. 2020</span>
 					<p>During a bachelor of Computer Engineering, students are taught how to work with both software and hardware. Subjects include various programming languages, computer networking, mathematics, useful skills and various projects.</p>
-					<span class="extra"><i>Propaedeutics achieved.</i></span>
+					<span class="extra"><i>Graduated july 2020.</i></span>
 				</li>
 				<li>
 					<h4><strong>Pre-University Education</strong> Penta College CSG Scala Rietvelden</h4>
@@ -142,7 +142,29 @@
 		<div class="grid_16 projects">
 			<h3>Projects</h3>
 
-			<!-- Lumin's Path-->
+			<!-- PinPoach-ID -->
+			<div class="grid_16">
+				<h4><strong>PinPoach-ID</strong></h4>
+				<div class="grid_8">
+					<span class="description">TensorFlow model for recognizing gunshots.</span>
+					<p>PinPoach-ID was the graduation project I worked on at Alten Nederland. Using the TensorFlow backend for Python, PinPoach-ID was capable of classifying sounds and alarming the user when gunfire was highly likely.</p>
+				</div>
+				<div class="grid_8">
+					<span class="dates">Feb. 2020 - Jul. 2020</span>
+					<br>
+					<span class="description">Skills:</span>
+					<ul>
+						<li>
+							<span class="description">Python</span>
+						</li>
+						<li>
+							<span class="description">TensorFlow</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Lumin's Path -->
 			<div class="grid_16">
 				<h4><strong>Lumin's Path</strong></h4>
 				<div class="grid_8">
@@ -318,7 +340,7 @@
 			</ul>
 			<p>
 				Rather have my resume on paper?<br>
-				<a href="res/CV_Falco_van_der_Meulen_2020-02.pdf" download="CV_Falco_van_der_Meulen_2020-02.pdf">Download PDF version</a>
+				<a href="res/CV_Falco_van_der_Meulen_2020-08.pdf" download="CV_Falco_van_der_Meulen_2020-08.pdf">Download PDF version</a>
 			</p>
 		</div>
 	</section>
